--- a/styles/header.css
+++ b/styles/header.css
@@ -24,7 +24,7 @@ header {
 
 .left-section-top {
     padding: 10px 0px;
-    font-size: 12px;
+    font-size: calc(6px + 0.390625vw);
     margin-left: 170px;
     margin-right: 20px;
     color: #5e6461;
@@ -79,15 +79,11 @@ header {
     justify-content: space-evenly;
     column-gap: 50px;
     flex-wrap: wrap;
-
-}
-
-ul {
     list-style-type: none;
 }
 
 li a {
-    font-size: 18px;
+    font-size: calc(11px + 0.390625vw);
     position: relative;
     text-decoration: none;
     color: rgb(221, 219, 219);
@@ -114,10 +110,73 @@ li a:hover:after {
     
 }
 
+.icon {
+    font-size: 35px;
+    display: none;
+}
+
+.icon:hover:after {
+    display: none;
+}
+
 .slad-logo {
     width: 150px;
     position: absolute;
     top: 10px;
     bottom: 10px;
     z-index: 100;
+}
+
+
+@media (min-width: 1250px) {
+    .left-section-top {
+        font-size: 11px;
+    }
+}
+
+@media (max-width: 770px) {
+    .nav {
+        display: block;
+    }
+    
+    .right-section-nav li a {display: none;}
+    .right-section-nav a.icon {
+        display: flex;  
+        justify-content: end;
+        padding-top: 18px;
+        margin-right: 20px;
+    }
+
+    .right-section-nav {
+        margin-left: 0;
+        display: block; 
+    }
+
+    .right-section-nav.responsive {
+        display: block;
+        position: relative;
+        background-color: rgb(0, 0, 0);
+        padding-left: 168px;
+        padding-top: 1px;
+        padding-bottom: 2px;
+        transition: padding 0.5s;
+        transition-timing-function: ease-out;
+    }
+
+    .right-section-nav.responsive a.icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+
+    .right-section-nav.responsive li a{
+        display: block;
+        text-align: start;
+        font-size: 35px;
+        margin-bottom: 20px;
+    }
+
+    li a:hover:after {
+        width: 0;   
+    }
 }
