--- a/styles/header.css
+++ b/styles/header.css
@@ -156,7 +156,7 @@ li a:hover:after {
         display: block;
         position: relative;
         background-color: rgb(0, 0, 0);
-        padding-left: 168px;
+        padding-left: 150px;
         padding-top: 1px;
         padding-bottom: 2px;
         transition: padding 0.5s;
@@ -178,5 +178,15 @@ li a:hover:after {
 
     li a:hover:after {
         width: 0;   
+    }
+
+    .left-section-top {
+        margin-left: 150px;
+    }
+}
+
+@media (max-width: 375px) {
+    .right-section-nav.responsive li a{
+        font-size: 30px;
     }
 }
