--- a/styles/results-grid.css
+++ b/styles/results-grid.css
@@ -1,27 +1,31 @@
 .results-main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    justify-items: center;
-    transition: margin 0.5s;
+    justify-content: center;
+    margin: 80px auto;
+    margin-bottom: 70px;
+    position: relative;
+    max-width: 1424px;
 }
 
 
 .results-grid {
     display: grid;
-    width: 350px;
+    width: 325px;
     margin: 30px 0 20px 0px;
     border-right: 1px solid black;
-    grid-template-columns: 125px 125px 50px;
+    grid-template-columns: 120px 125px 50px;
     grid-template-rows: 45px 75px 75px;
     font-size: 18px;
 }
 
 .date {
-    text-align: center;
+/*     text-align: center; */
+    padding-left: 10px;
 }
 
 .logo {
-    text-align: center;   
+/*     text-align: center; */
 }
 
 .logo-1 {
@@ -43,16 +47,13 @@
     padding-left: 10px;
 }
 
-.competion {
-}
-
 .result {
     padding-left: 20px;
     padding-top: 22px;
     font-size: 25px;
 }
 
-@media (max-width: 1416px) {
+@media (max-width: 1635px) {
     .results-main {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -76,10 +77,12 @@
     }
 }
 
-@media (max-width: 770px) {
+@media (max-width: 989px) {
     .results-main {
         display: grid;
         grid-template-columns: 1fr;
+        padding-right: 0px;
+        padding-left: 0;
     }
 
     .results-grid {
@@ -96,11 +99,6 @@
 
     .grid2, .grid4 {
         justify-self: center;
-    }
-
-    .results-main.responsive {
-        margin-top: 185px;
-        transition: 0.5s;
     }
 }
 
